<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.NoteDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:visibility="visible"
                android:hint="@string/txt_header"
                android:layout_margin="3dp"/>
            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:visibility="visible"
                android:hint="@string/txt_content"
                android:layout_margin="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_task_cancel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_state_type"
                android:theme="@style/AppMaterialTheme"
                android:layout_margin="5dp">

                <AutoCompleteTextView
                    android:id="@+id/drpdwn_state_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:editable="false"
                    android:cursorVisible="false"
                    android:textSize="12sp"
                    android:focusable="false"
                    android:paddingLeft="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/txt_add"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                app:cornerRadius="10dp"
                android:theme="@style/AppMaterialTheme"
                android:layout_margin="10dp"
                android:onClick="onClick">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/txt_update"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                app:cornerRadius="10dp"
                android:theme="@style/AppMaterialTheme"
                android:layout_margin="10dp"
                android:onClick="onClick"
                android:visibility="gone">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/txt_delete"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                app:cornerRadius="10dp"
                android:theme="@style/AppMaterialTheme"
                android:layout_margin="10dp"
                android:onClick="onClick"
                android:visibility="gone">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>




</FrameLayout>